--- a/templates/dice_page.html
+++ b/templates/dice_page.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div id="input">
-  <label>Enter the number of sides of the dice</label>
+  <label>Enter the number of sides of the dice:</label>
   <input type="number" value="6" min="0"  id="dicesides"></input>
   <button onclick="rollDice()">Roll</button>
   </div>
